cmake_minimum_required(VERSION 3.20)
project(library-system)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory(library)
# add_subdirectory(server)
add_subdirectory(http_server)
add_executable(main main.cpp)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/library)
target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/http_server)

target_link_libraries(runTests ${GTEST_LIBRARIES} pthread library)
# target_link_libraries(library ${GTEST_LIBRARIES})
target_link_libraries(main library httpserver)